--- a/content/posts/2025-02-23.md
+++ b/content/posts/2025-02-23.md
@@ -11,7 +11,7 @@ tags: [c, raylib, program]
 # a simple game with raylib
 為什麼會有這個東東呢?
 因為想要知道ai的註解是否好用，不想寫註解的人有福了，找ai就對了。
-
+<!--more-->
 ```c
 #include "raylib.h"
 #include <stdio.h>
